Modify: 코드 쉐어 기능 수정